--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,12 @@
+:root {
+  --color-pink-jc: hsl(341, 89%, 67%);
+  --color-violet-jc: hsl(282, 56%, 89%);
+  --color-violet-70-jc: rgba(233, 211, 243, 0.7);
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+  font-family: "Dancing Script", cursive;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  /*   -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; */
 }
