--- a/src/components/CartWidget.css
+++ b/src/components/CartWidget.css
@@ -1,14 +1,15 @@
 .quantity {
   background-color: var(--color-violet-jc);
   position: absolute;
-  top: 45px;
-  right: 20px;
+  top: 4.5rem;
+  right: 2rem;
   border-radius: 50%;
-  width: 25px;
-  height: 25px;
+  width: 2.5rem;
+  height: 2.5rem;
   text-align: center;
-  line-height: 25px;
+  line-height: 2.5rem;
   font-weight: bolder;
+  font-size: 1.5rem;
   z-index: 10;
 }
 .cart-icon {
