--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,60 +1,39 @@
 .navbar-main {
-  margin-top: 35px;
-  height: 70px;
+  margin-top: 3.5rem;
+  height: 7rem;
   background-color: var(--color-pink-jc);
   width: 100%;
   display: flex;
   justify-content: space-between;
 }
-.menu-icon {
-  cursor: pointer;
-}
+
 .navbar-logo {
-  margin-top: -25px;
-  height: 150px;
+  margin-top: -2.5rem;
+  height: 15rem;
 }
 .navlogo-container {
   align-items: center;
 }
 .navlist {
   position: absolute;
-  background-color: var(--color-violet-70-jc);
-  padding: 40px;
-  width: 160px;
-  left: 0px;
+  display: inline;
+  display: flex;
+  justify-content: space-evenly;
+  padding: 0;
+  margin: 0;
+  width: 38rem;
+  left: 0;
 }
 .navlist-item {
-  font-size: 40px;
+  font-size: 3rem;
   list-style: none;
-  padding: 15px 0;
+  padding: 0;
   cursor: pointer;
+  line-height: 3rem;
+  font-family: "Dancing Script", cursive;
 }
-.hide {
-  display: none;
-}
+
 .navlist-container,
 .navcart-container {
-  padding: 20px 30px;
-}
-@media (min-width: 900px) {
-  .menu-icon {
-    display: none;
-  }
-
-  .navlist {
-    display: inline;
-    background-color: rgba(0, 0, 0, 0);
-    display: flex;
-    justify-content: space-evenly;
-    padding: 0px;
-    margin: 0;
-    width: 380px;
-    left: 0px;
-  }
-  .navlist-item {
-    font-size: 32px;
-    list-style: none;
-    padding: 0;
-    line-height: 35px;
-  }
+  padding: 2rem 3rem;
 }
