--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,10 @@
   --color-pink-jc: hsl(341, 89%, 67%);
   --color-violet-jc: hsl(282, 56%, 89%);
   --color-violet-70-jc: rgba(233, 211, 243, 0.7);
+  font-size: 10px;
 }
 body {
   margin: 0;
-  font-family: "Dancing Script", cursive;
 
   /*   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; */
