--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,14 @@
   z-index: 1;
 }
 .main {
-  padding-top: 20rem;
+  padding-top: 15rem;
   z-index: 0;
   margin: 0 auto;
   width: 103rem;
   background-color: #ffffff;
+  margin-bottom: 5rem;
+}
+.capitalize {
+  text-transform: capitalize;
+  text-align: left;
 }
