--- a/src/App.css
+++ b/src/App.css
@@ -8,12 +8,16 @@
 .main {
   padding-top: 15rem;
   z-index: 0;
-  margin: 0 auto;
-  width: 103rem;
+  width: 100%;
   background-color: #ffffff;
   margin-bottom: 5rem;
 }
 .capitalize {
   text-transform: capitalize;
   text-align: left;
+}
+.spin {
+  margin-top: 10rem;
+  margin-left: 50%;
+  margin-right: 50%;
 }
