--- a/src/components/styles/NavBar.css
+++ b/src/components/styles/NavBar.css
@@ -1,6 +1,6 @@
 .navbar-main {
   margin-top: 3.5rem;
-  height: 7rem;
+  height: 70px;
   background-color: var(--color-pink-jc);
   width: 100%;
 }
@@ -8,36 +8,58 @@
   display: flex;
   justify-content: space-evenly;
   margin: 0 auto;
-  max-width: 110rem;
+  max-width: 1100px;
 }
 .navlogo-container {
   align-items: center;
 }
 .navbar-logo {
   margin-top: -2.5rem;
-  height: 15rem;
   width: 15rem;
 }
 .navlist-container,
 .navcart-container {
   padding: 2rem 3rem;
 }
+.navlist-container {
+  min-width: 50%;
+  text-align: center;
+}
+.nav-menu {
+  font-size: 3rem;
+  font-family: "Dancing Script", cursive;
+  padding: 0.5rem;
+  cursor: pointer;
+  line-height: 3rem;
+}
+.nav-menu:hover {
+  color: var(--color-violet-jc);
+}
 .navlist {
-  display: inline;
-  display: flex;
-  justify-content: space-evenly;
-  padding: 0;
+  padding: 1.5rem 0;
   margin: 0;
-  width: 38rem;
+  width: 100%;
   left: 0;
+  background-color: var(--color-pink-jc);
+}
+.navlist-list {
+  height: 0;
+  overflow: hidden;
+}
+.navlist-list.open {
+  height: 100%;
+  transition: height 600ms ease-in-out;
 }
 .navlist-item {
   font-size: 3rem;
   list-style: none;
-  padding: 0;
+  padding: 0.5rem;
   cursor: pointer;
   line-height: 3rem;
   font-family: "Dancing Script", cursive;
+}
+.navlist-item:hover {
+  color: var(--color-violet-jc);
 }
 .cart-icon {
   font-size: 3rem;
@@ -56,4 +78,25 @@
   font-weight: bolder;
   font-size: 1.5rem;
   z-index: 10;
+}
+@media screen and (min-width: 768px) {
+  .navlist-container,
+  .navcart-container {
+    padding: 2rem 3rem;
+  }
+  .nav-menu {
+    display: none;
+  }
+  .navlist {
+    display: inline;
+    display: flex;
+    justify-content: space-evenly;
+    padding: 0;
+    margin: 0;
+    width: 38rem;
+    left: 0;
+  }
+  .navlist-item {
+    padding: 0;
+  }
 }
