--- a/src/components/styles/ItemDetailContainer.css
+++ b/src/components/styles/ItemDetailContainer.css
@@ -7,3 +7,44 @@
   max-width: 100rem;
   margin: 10rem auto 1rem auto;
 }
+.item-count {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 13rem;
+  height: 2rem;
+  margin-bottom: 2rem;
+  padding-left: 1rem;
+}
+.qty-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 4rem;
+}
+.qty-num-bar {
+  font-size: 2rem;
+  line-height: 2rem;
+  width: 5rem;
+  text-align: center;
+  margin: 0;
+}
+.minus,
+.plus {
+  cursor: pointer;
+  font-family: arial;
+  font-size: 2.5rem;
+  color: var(--color-pink-jc);
+}
+.btn {
+  font-size: 1.3rem;
+  font-family: inherit;
+  color: white;
+  font-weight: 700;
+  border-radius: 2rem;
+  background-color: var(--color-pink-jc);
+  height: 4rem;
+  width: 17rem;
+  cursor: pointer;
+  margin-top: -1rem;
+}
