--- a/src/components/styles/ItemListContainer.css
+++ b/src/components/styles/ItemListContainer.css
@@ -19,64 +19,33 @@
   text-shadow: var(--color-pink-jc) 0.2rem -0.15rem 0.2rem;
 }
 .category-title {
-  max-width: 110rem;
+  max-width: 1100px;
   margin: 0 auto;
   text-align: center;
-  padding: 3rem 0 2rem 3rem;
-  font-size: 4rem;
+  padding: 3rem 0;
+  font-size: 3rem;
   font-weight: 700;
   font-family: "Dancing Script", cursive;
+}
+.not-found-text {
+  font-size: 2rem;
+  text-align: center;
+  width: 90%;
+  margin: auto;
 }
 .list-container {
   max-width: 1100px;
   margin: 0 auto;
 }
 .item-list {
+  padding: 2rem;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
-  grid-gap: 5rem 2rem;
-  width: 100%;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-gap: 2rem 2rem;
 }
-.item-count {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 13rem;
-  height: 2rem;
-  margin-bottom: 2rem;
-  padding-left: 1rem;
-}
-.qty-bar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 4rem;
-}
-.qty-num-bar {
-  font-size: 2rem;
-  line-height: 2rem;
-  width: 5rem;
-  text-align: center;
-  margin: 0;
-}
-.minus,
-.plus {
-  cursor: pointer;
-  font-family: arial;
-  font-size: 2.5rem;
-  color: var(--color-pink-jc);
-}
-.btn {
-  font-size: 1.3rem;
-  font-family: inherit;
-  color: white;
-  font-weight: 700;
-  border-radius: 2rem;
-  background-color: var(--color-pink-jc);
-  height: 4rem;
-  width: 17rem;
-  cursor: pointer;
-  margin-top: -1rem;
+.item-card {
+  margin: auto;
+  width: auto;
 }
 
 @media screen and (min-width: 768px) {
@@ -85,5 +54,9 @@
     padding-top: 12rem;
     font-size: 6rem;
     line-height: 7.5rem;
+  }
+  .category-title {
+    font-size: 3.5rem;
+    padding-bottom: 4rem;
   }
 }
