--- a/src/components/styles/ItemDetailContainer.css
+++ b/src/components/styles/ItemDetailContainer.css
@@ -1,17 +1,33 @@
 .detail-container {
   max-width: 1100px;
   margin: 0 auto;
-  padding: 0 3rem;
+  padding: 3rem 0;
 }
 .detail-card {
-  max-width: 100rem;
-  margin: 10rem auto 1rem auto;
+  display: flex;
+  flex-direction: column;
+  max-width: 90%;
+  width: 350px;
+  margin: 5rem auto;
+  padding: 1rem;
+  box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.264);
+  border-radius: 5px;
+  height: fit-content;
+}
+.card-body {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
+.qty-selector {
+  margin: 3rem auto 0 auto;
+  display: flex;
 }
 .item-count {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 13rem;
+  width: 130px;
   height: 2rem;
   margin-bottom: 2rem;
   padding-left: 1rem;
@@ -44,7 +60,24 @@
   border-radius: 2rem;
   background-color: var(--color-pink-jc);
   height: 4rem;
-  width: 17rem;
+  width: 170px;
   cursor: pointer;
   margin-top: -1rem;
+}
+.btn-end {
+  margin-top: 2rem;
+}
+
+@media screen and (min-width: 768px) {
+  .detail-card {
+    max-width: 600px;
+    min-width: fit-content;
+    flex-direction: row;
+    margin: 5rem 5rem;
+    gap: 2rem;
+  }
+
+  .detail-img {
+    max-width: 40%;
+  }
 }
